# ranker

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml
client/: .env.example  Dockerfile  index.html  package.json  tailwindcss.config.js  vite.config.ts
client/src/: api.ts
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile
server/examples/: event_serialize.rs  logging.rs  redis_basic.rs  sse.rs  test.rest  ws.rs
server/logs/: log.2023-08-26
server/src/: errors.rs  ids.rs  lib.rs  response.rs  state.rs  validate.rs
server/src/auth/: mod.rs
server/src/data/redis/: mod.rs  polls.rs
server/src/handlers/: mod.rs  not_found.rs  polls.rs  sse.rs  ws.rs
server/src/middlewares/: jwt.rs
server/src/models/: authed.rs  mod.rs  polls.rs  room.rs  sse.rs  vote.rs  ws.rs
server/src/services/: mod.rs  polls.rs  sse.rs  ws.rs
server/src/shared/: mod.rs
server/src/tests/: mod.rs  polls.rs  redis_basic.rs
web/: .env.example  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  Pages.vue  constants.ts  main.ts  poll-types.ts  style.css  utils.ts  vite-env.d.ts
web/src/components/: NominationForm.vue  ParticipantList.vue  TheFooter.vue  TheNavbar.vue
web/src/components/ui/: BottomSheet.vue  ColorizeText.vue  ConfirmationDialog.vue  CountSelector.vue  Loader.vue  RankedCheckBox.vue  ResultCard.vue  SnackBar.vue
web/src/router/: index.ts  page.ts
web/src/stores/: PollStore.ts
web/src/views/: Create.vue  Join.vue  Results.vue  Voting.vue  WaitingRoom.vue  Welcome.vue
