[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ranker-server"

[dependencies]
async-trait = "0.1.72"
axum = "0.6.20"
hyper = "0.14.27"
serde = { version = "1.0.181", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
