[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ranker-server"

[dependencies]
async-trait = "0.1.72"
axum = "0.6.20"
axum-extra = { version = "0.7.7", features = ["cookie"] }
chrono = "0.4.26"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.28"
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
nanoid = "0.4.0"
redis = { version = "0.23.1", features = ["tokio-comp", "json", "aio", "connection-manager"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["map-request-body", "auth", "util"] }
validator = { version = "0.16.1", features = ["derive"] }
